BLP-62: Spacing issues on App Mobile section also font size in slide intro

--- a/public/landingPage/stylesheets/responsive.css
+++ b/public/landingPage/stylesheets/responsive.css
@@ -388,11 +388,11 @@
     top:35%;
   }
   .intro-content h1 {
-    font-size: 100%;
+    font-size: 230%;
     line-height: 100%;
   }
   .intro-content h3 {
-    font-size: 90%;
+    font-size: 160%;
   }
   .slides-pagination a, .flex-control-nav a {
     padding-top: 5px;
